scrollbar behaviour fixed, linear gradient fixed

--- a/src/app/weather-forecast/weather-forecast.component.scss
+++ b/src/app/weather-forecast/weather-forecast.component.scss
@@ -44,9 +44,9 @@
   width: 100%;
   background: linear-gradient(
     90deg,
-    rgba(180, 180, 180, 0.3) 0%,
-    rgba(9, 9, 121, 0) 1.5%,
-    rgba(102, 102, 172, 0) 85%,
+    rgba(180, 180, 180, 0.4) 0%,
+    rgba(9, 9, 121, 0) 20px,
+    rgba(102, 102, 172, 0) calc(100% - 200px),
     rgba(255, 255, 255, 0.9) 100%
   );
   // pointer-events: none;
@@ -101,38 +101,13 @@
 
   // scroll-snap-type: mandatory;
   // scroll-behavior: smooth;
-  -webkit-overflow-scrolling: touch;
+  // -webkit-overflow-scrolling: touch;
 
   // firefox definition
-  scrollbar-color: rgba(100, 100, 100, 0.5) rgba(100, 100, 100, 0.2);
-  scrollbar-width: thin;
-
+  scrollbar-width: none;
   // chrome, safari definition
   &::-webkit-scrollbar {
-    height: 5px;
-  }
-  &::-webkit-scrollbar-track {
-    background-color: rgba(100, 100, 100, 0.2);
-  }
-  &::-webkit-scrollbar-thumb {
-    background-color: rgba(100, 100, 100, 0.5);
-  }
-
-  &.hidden {
-    // firefox definition
-    scrollbar-color: rgba(100, 100, 100, 0) rgba(100, 100, 100, 0);
-    scrollbar-width: thin;
-
-    // chrome, safari definition
-    &::-webkit-scrollbar {
-      height: 5px;
-    }
-    &::-webkit-scrollbar-track {
-      background-color: rgba(100, 100, 100, 0);
-    }
-    &::-webkit-scrollbar-thumb {
-      background-color: rgba(100, 100, 100, 0);
-    }
+    height: 0;
   }
 }
 
@@ -254,4 +229,29 @@
   height: 200px;
   border-right: 2px solid var(--border-color);
   border-bottom: 2px solid var(--border-color);
+}
+
+.scrollbar {
+  width: 100%;
+  height: 4px;
+  position: absolute;
+  bottom: 0;
+  transition: background-color 0.5s;
+  background-color: rgba(100, 100, 100, 0.2);
+
+  & .scrollbar-thumb {
+    position: relative;
+    height: 100%;
+    width: 1%;
+    left: 0;
+    transition: background-color 0.5s;
+    background-color: rgba(100, 100, 100, 0.5);
+  }
+
+  &.hidden {
+    background-color: rgba(100, 100, 100, 0);
+    & .scrollbar-thumb {
+      background-color: rgba(100, 100, 100, 0);
+    }
+  }
 }
